added entries page

--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-#projectCardsDiv { 
+#CardsDiv { 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 0.5rem;
