--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -55,7 +55,7 @@ code {
   width:230px;
   color: black;
   border-radius: 8px;
-  position: fixed;
+  position: relative;
   
 }
 
@@ -218,15 +218,30 @@ letter-spacing: 2px;
 }
 
 .form-special{
-  /* margin-left: 815px;
-  width: 500px; */
+  
   display: block;
   width: 500px; 
     margin-left: auto;
     margin-right: auto;
+    text-align: left;  
+  
+}
+
+.newprojectform{
+  /* margin-top: 90px; */
+  display: block;
+  width: 600px; 
+    margin-left: auto;
+    margin-right: auto;
     text-align: left;
-  
-  
+}
+
+.entryform{
+  display: block;
+  width: 600px; 
+    margin-left: 330px;
+    margin-right: auto;
+    text-align: left;
 }
 
 .formdiv{
@@ -246,29 +261,46 @@ letter-spacing: 2px;
 
 .formButton{
   text-align: center;
+  
+}
+
+.formButton2{
+  /* text-align: center; */
+   margin-left: 330px;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
 
 .formbtn{
+  margin-top: 20px;
+  margin-right: 10px;
   background-color:white;
   color:black;
   letter-spacing: 2px;
 }
 
 .askdiv{
-  float:right;
+  float:left;
   text-align: center;
   margin:20px;
   margin-right: 60px;
+  /* background-color: rgb(218, 213, 218); */
+  padding: 20px;
+  border-radius: 20px;
+  position:fixed;
+  right: 260px;
+  bottom:20px;
+
 }
 
 .askPlan{
 
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   background-color: rgb(71, 71, 71);
   color: white;
-  font-size: 40px;
+  font-size: 30px;
   background-image: ;
   margin: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
