--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -315,6 +315,28 @@ letter-spacing: 2px;
   border-radius: 10px;
 }
 
+.addprompt{
+  text-align: center;
+  margin-top: 50px;
+  background-color: rgb(231, 231, 231);
+  padding: 80px;
+  padding-top: 200px;
+  padding-bottom: 300px;
+  margin-right:300px;
+  margin-left:300px;
+  border-radius: 30px;
+}
+.prompttitle{
+  padding-bottom: 20px;
+}
+.addbtn{
+ 
+  border-radius: 50%;
+  height: 70px;
+  width: 70px;
+}
+
+
 
 
 
