--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -146,10 +146,11 @@ margin-left: 1.5rem;
   border-radius: 8px;
   position: relative;
   outline: none;
-  box-shadow: 5px;
-  border: none;
-  background-color: rgb(223, 223, 223);
-  padding: 20px;
+  /* box-shadow: 10px; */
+  /* border: none; */
+  border-color: rgb(223, 223, 233);
+  color: rgb(32, 31, 31); 
+   padding: 20px;
   font-size: 20px;
   
 }
