--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -400,11 +400,12 @@ letter-spacing: 2px;
   padding: 20px;
   border-radius: 20px;
  
-  top: 35%;
-  left: 80%;
+  top: 10%;
+  left: 33%;
+  /* height:; */
   /* bottom:60px; */
-  background-color: rgb(240, 240, 240);
-  width: 300px;
+  background-color: rgb(202, 219, 240);
+  width: 500px;
   text-align: center;
   position: fixed;
   
@@ -414,7 +415,8 @@ letter-spacing: 2px;
 .pointer {
 	height: 40px;
 	width: 40px;
-	background:rgb(240, 240, 240);
+  background-color: rgb(202, 219, 240);
+
 	margin: 0 auto;
 	transform: rotate(45deg);
 	border-radius: 0 0 12px 0;
@@ -451,9 +453,10 @@ letter-spacing: 2px;
   height: 60px;
   border-radius: 50%;
   text-align: center;
-  background-color: rgb(71, 71, 71);
-  color: white;
+  background-color: rgb(255, 255, 255);
+  color: rgb(17, 17, 17);
   font-size: 30px;
+  border:none;
   /* background-image: ; */
   margin: 20px;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -477,17 +480,30 @@ letter-spacing: 2px;
   margin-top: 30px;
   margin:10px;
   border-radius: 10px;
+  border:none;
+  margin-bottom: 20px;
+  
+  
+}
+
+.askdiv-img{
+  position: fixed;
+  top: 50%;
+  right: 40%;
+  width: 900px;
   
 }
 
 .response{
-  width: 262px;
+
   /* background-color: rgb(226, 226, 226); */
-  padding: 10px;
+
   border-radius: 10px;
-  text-align: center;
+ text-align: center;
   font-size: 25px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  margin-top: 20px ;
+  padding:5px ;
 }
 
 .addprompt{
