--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -20,10 +20,19 @@ code {
   grid-auto-rows: minmax(3rem, auto);
   padding-right: 10%;
   padding-left: 15%;
-  
- 
 
- 
+
+}
+
+#CardsDivEntries { 
+  
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 0.5rem;
+  grid-auto-rows: minmax(3rem, auto);
+  padding-right: 10%;
+  padding-left: 15%;
+  margin-top: 50px;
 }
 
 #CardsDiv2 { 
@@ -152,13 +161,77 @@ margin-left: 1.5rem;
   color: rgb(32, 31, 31); 
    padding: 20px;
   font-size: 20px;
+  position:absolute;
+  margin-left: 1008px;
   
 }
 
 .searchicon{
   width: 30px;
-  margin-left: 750px;
+  top:231px;
+  margin-left: 960px;
+  position: absolute;
 }
+
+
+.searchbarentries{
+  margin-left: 15px;
+ /* float: right; */
+  height: 43px;
+  width:300px;
+  color: black;
+  border-radius: 8px;
+  position: relative;
+  outline: none;
+  /* box-shadow: 10px; */
+  /* border: none; */
+  border-color: rgb(223, 223, 233);
+  color: rgb(32, 31, 31); 
+   padding: 20px;
+  font-size: 20px;
+  position:absolute;
+  margin-left: 1150px;
+  
+}
+
+.searchiconentries{
+  width: 30px;
+  top:168px;
+  margin-left: 1099px;
+  position: absolute;
+}
+
+
+.searchbarentries2{
+  margin-left: 15px;
+ /* float: right; */
+  height: 43px;
+  width:300px;
+  color: black;
+  border-radius: 8px;
+  position: relative;
+  outline: none;
+  /* box-shadow: 10px; */
+  /* border: none; */
+  border-color: rgb(223, 223, 233);
+  color: rgb(32, 31, 31); 
+   padding: 20px;
+  font-size: 20px;
+  position:absolute;
+  margin-left: 970px;
+  
+}
+
+.searchiconentries2{
+  width: 30px;
+  top:168px;
+  margin-left: 920px;
+  position: absolute;
+}
+
+
+
+
 
 .deletebtn{
   margin-bottom: 10px;
