--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -277,6 +277,28 @@ margin-left: 1.5rem;
  
 }
 
+.profileImagepreview{
+  width: 270px;
+  border-radius: 50%;
+  display: center;
+  object-fit: cover;
+  object-position: center;
+
+  
+ 
+}
+
+.profileDivpreview{
+  padding-top: 20px;
+  text-align: center;
+object-position: center;
+line-height: normal;
+vertical-align: middle; 
+ padding-left: 0px;
+  
+}
+
+
 .profileDiv{
   padding: 20px;
   text-align: center;
@@ -295,6 +317,26 @@ line-height: normal;
 vertical-align: middle;
 padding:20px;
 border-radius: 10px;
+}
+
+.profilebtnedit{
+  margin:5px;
+  display: inline-block;
+  width: 130px;
+height: 30px;
+margin:10px;
+border-radius: 10px;
+color:rgb(95, 94, 94);
+background-color:  rgb(243, 239, 239);
+letter-spacing: 2px;
+border-color:  rgb(243, 239, 239);
+border:none;
+}
+.profilebtnedit:hover{
+  background-color:rgb(168, 164, 164);
+  color:rgb(255, 254, 254);
+  
+  letter-spacing: 2px;
 }
 
 .profilebtn{
@@ -422,6 +464,21 @@ letter-spacing: 2px;
     text-align: left;
 }
 
+.newprojectform2{
+  /* margin-top: 90px; */
+  display: block;
+  width: 600px; 
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
+#bio{
+  
+  height:90px;
+  padding-bottom: 60px;
+}
+
 .entryform{
   display: block;
   width: 600px; 
@@ -463,6 +520,20 @@ letter-spacing: 2px;
   background-color:white;
   color:black;
   letter-spacing: 2px;
+}
+
+.formbtnedit{
+  margin-top: 90px;
+  margin-bottom: 0px;
+  margin-right: 10px;
+  margin-left: 750px;
+  background-color:white;
+  color:black;
+  letter-spacing: 2px;
+}
+
+.preview{
+  margin-top: 20px;
 }
 
 .overlay{
