m,ore profile styling

--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -268,11 +268,13 @@ margin-left: 1.5rem;
 }
 
 .profileImage{
-  width: 270px;
+  width: 250px;
   border-radius: 50%;
   display: center;
   object-fit: cover;
   object-position: center;
+  border-color: rgb(255, 255, 255);
+  border-style: 10px ;
   
  
 }
@@ -325,14 +327,19 @@ opacity: 100%;
 }
 
 .biodiv{
-  background-color: rgb(243, 239, 239);
+  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(243, 239, 239); */
+  color: rgb(99, 97, 97);
   width: 500px;
   text-align: center;
   display: inline-block;
 line-height: normal;
 vertical-align: middle;
 padding:20px;
-border-radius: 10px;
+border-radius: 8px;
+border: black;
+border-color: black;
+
 }
 
 .profilebtnedit{
@@ -342,14 +349,14 @@ border-radius: 10px;
 height: 30px;
 margin:10px;
 border-radius: 10px;
-color:rgb(95, 94, 94);
-background-color:  rgb(243, 239, 239);
+color:rgb(255, 255, 255);
+background-color:  rgb(150, 150, 150);
 letter-spacing: 2px;
 border-color:  rgb(243, 239, 239);
 border:none;
 }
 .profilebtnedit:hover{
-  background-color:rgb(168, 164, 164);
+  background-color:rgb(56, 56, 56);
   color:rgb(255, 254, 254);
   
   letter-spacing: 2px;
@@ -367,9 +374,8 @@ background-color: rgb(255, 255, 255);
 letter-spacing: 2px;
 }
 .profilebtn:hover{
-  background-color:rgb(34, 32, 32);
+  background-color:rgb(54, 54, 54);
   color:rgb(255, 254, 254);
-  font-weight: bolder;
   letter-spacing: 2px;
 }
 
@@ -536,6 +542,11 @@ background-color: black;
 
 }
 
+.signupimage-div{
+ 
+  margin:auto;
+}
+
 .btn btn-dark{
   width:200px;
   
@@ -613,6 +624,16 @@ button.btn-primary:hover{
 .login-image{
   display:inline-block;
   width:400px;
+  
+}
+
+.signup-image{
+  display:inline-block;
+  width:400px;
+  margin:auto;
+  position: relative;
+
+  
 }
 
 #bio{
