--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -1,3 +1,6 @@
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,6 +18,7 @@ code {
 .projecttitle{
 margin-top:45px ;
   top:100px;
+  /* font-family: Georgia, 'Times New Roman', Times, serif */
 }
 
 #CardsDiv { 
@@ -25,6 +29,8 @@ margin-top:45px ;
   grid-auto-rows: minmax(3rem, auto);
   padding-right: 10%;
   padding-left: 15%;
+  /* background-image: url(http://savedelete.com/wp-content/uploads/2012/07/paperlinetexture-e1280161142622.jpg); */
+  background-image: cover;
 
 
 }
@@ -92,11 +98,14 @@ margin-top:45px ;
  
   border-radius: 15px;
   /* background-color: rgb(243, 243, 243); */
-  background-color: rgb(236, 241, 241);
+  /* background-color: rgb(236, 241, 241); */
   /* color: rgb(48, 47, 47); */
+  background-color: rgb(248, 248, 248);
   color: rgb(48, 47, 47);
   letter-spacing: 2px;
 outline: none; 
+
+
 
 }
 
@@ -268,8 +277,9 @@ margin-left: 1.5rem;
 }
 
 .profileImage{
-  width: 250px;
+  width: 200px;
   border-radius: 50%;
+  margin-top:80px;
   display: center;
   object-fit: cover;
   object-position: center;
@@ -329,8 +339,9 @@ opacity: 100%;
 .biodiv{
   background-color: rgb(255, 255, 255);
   /* background-color: rgb(243, 239, 239); */
-  color: rgb(99, 97, 97);
+  color: rgb(97, 86, 86);
   width: 500px;
+  min-height:00px;
   text-align: center;
   display: inline-block;
 line-height: normal;
@@ -348,16 +359,16 @@ border-color: black;
   width: 130px;
 height: 30px;
 margin:10px;
-border-radius: 10px;
-color:rgb(255, 255, 255);
-background-color:  rgb(150, 150, 150);
+border-radius: 8px;
+color:rgb(47, 49, 49);
+background-color: rgb(188, 219, 240);
 letter-spacing: 2px;
 border-color:  rgb(243, 239, 239);
 border:none;
 }
 .profilebtnedit:hover{
-  background-color:rgb(56, 56, 56);
-  color:rgb(255, 254, 254);
+  background-color:rgb(248, 246, 246);
+  color:rgb(0, 0, 0);
   
   letter-spacing: 2px;
 }
@@ -707,7 +718,7 @@ button.btn-primary:hover{
   position: absolute;
 }
 .askdiv{
-  position:absolute;
+  position:relative;
   top: 0;
   text-align: center;
   margin:20px;
@@ -775,7 +786,7 @@ button.btn-primary:hover{
   font-size: 30px;
   border:none;
   /* background-image: ; */
-  margin: 20px;
+  margin: 10px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   
 }
@@ -806,8 +817,9 @@ button.btn-primary:hover{
 .askdiv-img{
   position: fixed;
   top: 55%;
-  right: 50%;
+  right: 48%;
   width: 250px;
+  margin:auto;
   
 }
 
@@ -874,6 +886,7 @@ button.btn-primary:hover{
   margin-right: 10px;
   margin-top:10px;
   font-size: 20px;
+  
   /* background: linear-gradient(rgb(27, 25, 25), rgb(255, 255, 255)); */
   outline: none;
   box-shadow: 5px;
