--- a/frontend/frontend/src/index.css
+++ b/frontend/frontend/src/index.css
@@ -504,6 +504,20 @@ letter-spacing: 3px;
   z-index: 0;
 
 }
+.landingImage3{
+  width: 650px;
+  padding-left: 50px;
+  /* padding-top:60px; */
+  
+  /* float:left;
+  margin-right: 60px;
+  margin-left: -40px; */
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 0;
+
+}
 
 .logo{
   width: 100px
